Agregado el campo url, timestamp y userId en el modelo de CovidStats. Middleware con adminkey para el registro de nuevos Usuarios. Actualizacion de swagger. Actualizacion de README
