# server/routes/auth-routes.js
@@ -1,8 +1,9 @@
 const express = require('express'),
   UsersController = require('../controllers/auth-controller'),
+  adminMiddleware = require('../middlewares/has-admin-key'),
   router = express.Router()
 
-router.post('/registerUser', UsersController.registerUser)
+router.post('/registerUser', adminMiddleware.hasAdminKey , UsersController.registerUser)
 router.post('/signIn', UsersController.signIn)
 
 module.exports = router
